...

  Created by jk234ert on 2019/2/20.
  Copyright © 2019 Sujitech. All rights reserved.
*/
"Common.Button.Cancel" = "Cancel";
"Common.Button.OK" = "OK";
"Common.Button.Delete" = "Delete";
"Common.Button.Edit" = "Edit";
"Common.Button.Discard" = "Discard";
"Common.Button.Done" = "Done";

"Common.Label.NameUnknown" = "[Unknown]";
"Common.Label.NameNone" = "[None]";
"Common.Label.NameNull" = "[null]";

"Common.Alert.Error" = "Error";
...
"WizardCollectionViewController.Page.copytoInterpret.titleText" = "Copy to Interpret";

"WizardCollectionViewController.Page.importPublicKeys.detailText" = "You can import OpenPGP public keys\nby tapping \"+\" button in Contacts view\n and pasting in the full public key.";
"WizardCollectionViewController.Page.typeAndEncrypt.detailText" = "With Tessercube Keyboard, after\ntyping a message, you can tap the\n\"tesseract\" icon and select recipeints\nto encrypt for them.";
"WizardCollectionViewController.Page.copytoInterpret.detailText" = "Copy an encrypted message in a chat\nview to interpret the message. You\ncan also tap the \"Key\" icon in text edit\narea to interpret the text in the field.";

"IntroWizardViewController.Action.Button.skipGuides" = "Skip Guides";
"IntroWizardViewController.Action.Button.notNow" = "Not Now";

"IntroWizardViewController.Step.contactsScene" = "This is where you manage your contacts.";
"IntroWizardViewController.Step.importContact" = "Tap \"+\" to import a contact with their public key.";
"IntroWizardViewController.Step.messagesScene" = "This is where you manage your message history.";
"IntroWizardViewController.Step.composeMessage" = "Tap \"Compose\" to encrypt a message or create a signature; or both.";
...
"IntroWizardViewController.Step.completeGuide" = "🎉 Guide Completed 🎉\nCreate a keypair right now?";

"ContactDetailViewController.Label.Fingerprint" = "Fingerprint";
"ContactDetailViewController.Label.Validity" = "Validity";
"ContactDetailViewController.Label.Keytype" = "Type";
"ContactDetailViewController.Label.CreatedAt" = "Created at";
"ContactDetailViewController.Label.Email" = "Email";
"ContactDetailViewController.Label.InvalidFingerprint" = "Invalid Fingerprint";
"ContactDetailViewController.Label.Valid" = "Valid";
"ContactDetailViewController.Label.Invalid" = "Invalid";
"ContactDetailViewController.Button.SendMessage" = "Send Message";
"ContactDetailViewController.Button.ExportPubKey" = "Export Full Public Key";

"EditContactViewController.Label.DeleteContact" = "Delete Contact";
"EditContactViewController.Action.Button.ConfirmDeleteContact" = "Would you like to delete this contact?";
"EditContactViewController.Action.Button.ConfirmDeleteKeypairs" = "Would you like to keep the public key of this contact?";
"EditContactViewController.Action.Button.KeepPublicKey" = "Keep Public Key";
"EditContactViewController.Action.Button.DeleteKeyPair" = "Delete Key Pairs";
"EditContactViewController.EditType.Name" = "Name";
"EditContactViewController.EditType.Trust" = "Trust";

"MainTabbarViewController.TabBarItem.Contacts.title" = "Contacts";
"MainTabbarViewController.TabBarItem.Messages.title" = "Messages";
"MainTabbarViewController.TabBarItem.Me.title" = "Me";

"MessagesViewController.SegmentedControl.timeline" = "Timeline";
"MessagesViewController.SegmentedControl.savedDrafts" = "Saved Drafts";
"MessagesViewController.EmptyView.Prompt" = "No message yet.\nYou can compose and interpret messages.\nMessages composed and interpreted in\nTessercube keyboard will appear here.";
"MessagesViewController.EmptyView.SearchingPrompt" = "No message.";
"MessagesViewController.Action.Button.Compose" = "Compose";
"MessagesViewController.Action.Button.Interpret" = "Interpret";
"MessagesViewController.Action.Button.CopyMessageContent" = "Copy Message Content";
"MessagesViewController.Action.Button.CopyRawPayload" = "Copy Raw Payload";
"MessagesViewController.Action.Button.MarkAsFinished" = "Mark as Finished";
"MessagesViewController.Action.Button.ShareEncryptedMessage" = "Share Encrypted Message";
"MessagesViewController.Action.Button.ShareSignedMessage" = "Share Signed Message";
"MessagesViewController.Action.Button.ReCompose" = "Re-compose";
"MessagesViewController.Alert.Title.DeleteMessage" = "Delete Message?";
"MessagesViewController.Toolbar.Button.SelectAll" = "Select All";
"MessagesViewController.Toolbar.Button.DeselectAll" = "Deselect All";
"MessagesViewController.Alert.Message.deleteMessage" = "Delete Selected message";
"MessagesViewController.Alert.Message.deleteMessages" = "Delete Selected %lu messages";

"MessageCardCell.Label.SignedBy" = "Signed by:";
"MessageCardCell.Label.Recipeints" = "Recipeints:";
...
"MessageCardCell.Label.Interpret" = " interpreted";
"MessageCardCell.Label.Edited" = " last edited";
"MessageCardCell.Button.Expand.expand" = "Show full %lu lines";
"MessageCardCell.Button.Expand.collapse" = "Collapse";

"ComposeMessageViewController.Title" = "Compose";
"ComposeMessageViewController.BarButtonItem.Finish" = "Finish";
"ComposeMessageViewController.TextView.Message.Placeholder" = "Message goes here...";
"ComposeMessageViewController.RecipientContactPickerView.TitleLabel.Text.To" = "To:";
"ComposeMessageViewController.SenderContactPickerView.TitleLabel.Text.From" = "From:";
"ComposeMessageViewController.Alert.Title.SkipInvalidResipients" = "Skip invalid recipeints";
"ComposeMessageViewController.Alert.Title.SaveDraft" = "Save draft?";
"ComposeMessageViewController.Alert.Title.MissingEncryptionKey" = "Missing encryption key";
...
"InterpretMessageViewModel.Alert.Message.BadPayload" = "The message payload is invalid.\nPlease verify again.";

"MeViewController.KeyCardCell.Label.NoKeyYet" = "No keypair yet";
"MeViewController.KeyCardCell.Label.InvalidFingerprint" = "Invalid Fingerprint";

"MeViewController.Action.Prompt" = "Create or import a key to start using.";
"MeViewController.Action.Button.CreateKey" = "Create Keypair";
"MeViewController.Action.Button.ImportKey" = "Import Keypair";
"MeViewController.Action.Button.ScanQR" = "Scan QR Code";
"MeViewController.Action.Button.Settings" = "Settings";
"MeViewController.Action.Button.ConfirmDeleteKey" = "Yes, Delete ";

"SettingsViewController.Title" = "Settings";
...
"ImportKeyController.Action.Button.PastePrivateKey" = "Paste Private Key";
"ImportKeyController.Action.Button.ScanQR" = "Scan QR Code";
"ImportKeyController.Action.Button.MaybeLater" = "Maybe Later";

"PasteKeyViewController.Title.PastePrivateKey" = "Paste Private Key";
"PasteKeyViewController.Title.ImportPublicKey" = "Import Public Key";
"PasteKeyViewController.Placeholder.Password" = "Password";
"PasteKeyViewController.Alert.Title.Notice" = "Notice";
"PasteKeyViewController.Alert.Message.ImportAsPublicKey" = "This keypair contains private key part. Continue importing will only import the public key part";
"PasteKeyViewController.Alert.Message.noPublicKey" = "Cannot parse public key armor.\nPlease try again";
"PasteKeyViewController.Alert.Button.Continue" = "Continue";

"MeViewController.Action.Button.Export" = "Export Private Key";
"MeViewController.Action.Button.Share" = "Share Public Key";

"CreateNewKeyViewController.Label.Name" = "Name";
"CreateNewKeyViewController.Label.Email" = "Email";
"CreateNewKeyViewController.Label.Password" = "Password";
"CreateNewKeyViewController.Label.ConfirmPassword" = "Confirm Password";
"CreateNewKeyViewController.Label.Easymode" = "Easy Mode";
"CreateNewKeyViewController.Label.Algorithm" = "Algorithm";
"CreateNewKeyViewController.Label.KeyLength" = "Key Length";

"CreateNewKeyViewController.Alert.Title.NameRequired" = "Name is required to create a key";
"CreateNewKeyViewController.Alert.Title.NameInvalid" = "Name cannot contain the following characters: <>()";
...
