...
    }
}

extension PreviewStub {

    static let `default`: PreviewStub = {
        let names = ["Alice", "Bob", "Carol", "Dan", "Erin"]
        let contacts = names.enumerated().map { Contact(id: Int64($0.0 + 1), name: $0.1) }
        let emails = names.enumerated().map { Email(id: Int64($0.0 + 1), address: $0.1 + "@tessercube.com", contactId: Int64($0.0 + 1)) }
        let keyRecords: [KeyRecord] = {
            let longIdentifiers = ["6A0486D70E04861C", "DE6EAE80E11D78AA", "39611A75DFDD4174", "CE0ABAE54FB29D09", "130A9C2FB95F029B"]
            let hasSecretKeys = [true, false, false, false, false]
            let hasPublicKeys = [true, true, true, true, true]
...
