...
            tableView.backgroundColor = ._systemBackground
        }
        tableView.allowsMultipleSelectionDuringEditing = true
        tableView.keyboardDismissMode = .interactive
        tableView.preservesSuperviewLayoutMargins = true
        tableView.cellLayoutMarginsFollowReadableWidth = true
        tableView.accessibilityLabel = "ContactsTableView"
        return tableView
    }()
    
    private lazy var emptyView: ListEmptyView = {
        let view = ListEmptyView(frame: .zero)
        view.textLabel.text = L10n.ContactListViewController.EmptyView.prompt
...
